SERVER-12231 fixed explain for geo 2D