src/mongo/db/exec/2dnear.h
@@ -173,7 +173,7 @@ namespace twod_exec {
         GeoHash _start;
         int _numWanted;
         double _scanDistance;
-        long long _nscanned;
+        long long _nscanned; // XXX: unused?
         int _found;
         GeoDistType _type;
         Box _want;
